added form element to form.html and thank_you.html page content

--- a/thank_you.html
+++ b/thank_you.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Sound-Fi</title>
 </head>
-
 <body>
     <header>
         <h1>Sound-Fi</h1>
     </header>
-
+    <div class="main">
+        <p>Thank you for Joining Sound-Fi the Sound-Fi Community</p>
+        <a id="nav" href="index.html" target="_blank">Back to the music</a>
+    </div>
+    <!--js-->
     <script src="assets/js/script.js"></script>
 </body>
 <footer></footer>
