--- a/form.html
+++ b/form.html
@@ -11,7 +11,49 @@
     <header>
         <h1>Sound-Fi</h1>
     </header>
-
+    <div class="main">
+        <div id="form">
+            <!--form action will not go to thank_you.html???-->
+            <form id="registration-form" action="thank_you.html" method="POST">
+                <div id="form-div" class="username">
+                    <label for="username">Username</label>
+                    <input name="username" id="username" type="text" required>
+                </div>
+                <div id="form-div" class="email">
+                    <label for="email">Email</label>
+                    <input name="email" id="email" type="email" required>
+                </div>
+                <div id="form-div" class="password">
+                    <label for="password">Password</label>
+                    <input name="password" id="password" type="password" required>
+                </div>
+                <div id="form-div" class="confirm-password">
+                    <label for="confirm-password">Confirm Password</label>
+                    <input name="confirm-password" id="confirm-password" type="password" required>
+                </div>
+                <div id="form-div" class="age">
+                    <label for="age">Age</label>
+                    <input name="age" id="age" type="number" min="18" max="110" required>
+                </div>
+                <div id="form-div" class="phone">
+                    <label for="phone">Phone (numbers only)</label>
+                    <input name="phone" id="phone" type="text" pattern="[0-9]+" required>
+                </div>
+                <div id="form-div" class="join-newsletter">
+                    <label for="join-newsletter">Join Newsletter</label>
+                    <input name="join-newsletter" id="join-newsletter" type="checkbox" checked>
+                </div>
+                <div id="errors"></div>
+                <div id="form-div" class="submit">
+                    <input type="submit" value="Register">
+                </div>
+            </form>
+            <div id="join">
+                <a id="nav" href="index.html" target="_blank">Back to Sound-Fi</a>
+            </div>
+        </div>
+    </div>
+    <!--js-->
     <script src="assets/js/script.js"></script>
 </body>
 <footer></footer>
