error on form element. commented on line 16 form.html

--- a/form.html
+++ b/form.html
@@ -12,8 +12,8 @@
         <h1>Sound-Fi</h1>
     </header>
     <div class="main">
-        <div id="form">
-            <!--form action will not go to thank_you.html???-->
+        <div id="form"><!--form content from code institute lesson-->
+            <!--ERROR form action will not go to thank_you.html-->
             <form id="registration-form" action="thank_you.html" method="POST">
                 <div id="form-div" class="username">
                     <label for="username">Username</label>
