--- a/form.html
+++ b/form.html
@@ -13,7 +13,12 @@
     </header>
     <div class="main">
         <div id="form"><!--form content from code institute lesson-->
-            <!--ERROR form action will not go to thank_you.html-->
+            <!--ERROR form action will not go to thank_you.html
+            broweser displaying message
+            "Error response
+            Error code: 501Message: Unsupported method ('POST').
+            Error code explanation: HTTPStatus.NOT_IMPLEMENTED - 
+            Server does not support this operation".-->
             <form id="registration-form" action="thank_you.html" method="POST">
                 <div id="form-div" class="username">
                     <label for="username">Username</label>
