added h3 and he tags to index.html and form.html respectively

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   </section>
     <header>
         <h1>Sound-Fi</h1>
+        <h3>Click or Press Pads to play</h3>
     </header>
     <!--user interface-->
     <section id="user-view">
