--- a/form.html
+++ b/form.html
@@ -1,66 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Sound-Fi</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Sound-Fi</h1>
+      <h1>Sound-Fi</h1>
+      <h4>Form for demo purposes only</h4>
     </header>
     <div class="main">
-        <div id="form"><!--form content from code institute lesson-->
-            <!--ERROR form action will not go to thank_you.html
+      <div id="form">
+        <!--form content from code institute lesson-->
+        <!--ERROR form action will not go to thank_you.html
             broweser displaying message
             "Error response
             Error code: 501Message: Unsupported method ('POST').
             Error code explanation: HTTPStatus.NOT_IMPLEMENTED - 
             Server does not support this operation".-->
-            <form id="registration-form" action="thank_you.html" method="POST">
-                <div id="form-div" class="username">
-                    <label for="username">Username</label>
-                    <input name="username" id="username" type="text" required>
-                </div>
-                <div id="form-div" class="email">
-                    <label for="email">Email</label>
-                    <input name="email" id="email" type="email" required>
-                </div>
-                <div id="form-div" class="password">
-                    <label for="password">Password</label>
-                    <input name="password" id="password" type="password" required>
-                </div>
-                <div id="form-div" class="confirm-password">
-                    <label for="confirm-password">Confirm Password</label>
-                    <input name="confirm-password" id="confirm-password" type="password" required>
-                </div>
-                <div id="form-div" class="age">
-                    <label for="age">Age</label>
-                    <input name="age" id="age" type="number" min="18" max="110" required>
-                </div>
-                <div id="form-div" class="phone">
-                    <label for="phone">Phone (numbers only)</label>
-                    <input name="phone" id="phone" type="text" pattern="[0-9]+" required>
-                </div>
-                <div id="form-div" class="join-newsletter">
-                    <label for="join-newsletter">Join Newsletter</label>
-                    <input name="join-newsletter" id="join-newsletter" type="checkbox" checked>
-                </div>
-                <div id="errors"></div>
-                <div id="form-div" class="submit">
-                    <input type="submit" value="Register">
-                </div>
-            </form>
-            <div id="join">
-                <a id="nav" href="index.html" target="_blank">Back to Sound-Fi</a>
-            </div>
+        <form id="registration-form" action="thank_you.html" method="POST">
+          <div id="form-div" class="username">
+            <label for="username">Username</label>
+            <input name="username" id="username" type="text" required />
+          </div>
+          <div id="form-div" class="email">
+            <label for="email">Email</label>
+            <input name="email" id="email" type="email" required />
+          </div>
+          <div id="form-div" class="password">
+            <label for="password">Password</label>
+            <input name="password" id="password" type="password" required />
+          </div>
+          <div id="form-div" class="confirm-password">
+            <label for="confirm-password">Confirm Password</label>
+            <input
+              name="confirm-password"
+              id="confirm-password"
+              type="password"
+              required
+            />
+          </div>
+          <div id="form-div" class="age">
+            <label for="age">Age</label>
+            <input
+              name="age"
+              id="age"
+              type="number"
+              min="18"
+              max="110"
+              required
+            />
+          </div>
+          <div id="form-div" class="phone">
+            <label for="phone">Phone (numbers only)</label>
+            <input
+              name="phone"
+              id="phone"
+              type="text"
+              pattern="[0-9]+"
+              required
+            />
+          </div>
+          <div id="form-div" class="join-newsletter">
+            <label for="join-newsletter">Join Newsletter</label>
+            <input
+              name="join-newsletter"
+              id="join-newsletter"
+              type="checkbox"
+              checked
+            />
+          </div>
+          <div id="errors"></div>
+          <div id="form-div" class="submit">
+            <input type="submit" value="Register" />
+          </div>
+        </form>
+        <div id="join">
+          <a id="nav" href="index.html" target="_blank">Back to Sound-Fi</a>
         </div>
+      </div>
     </div>
     <!--js-->
     <script src="assets/js/script.js"></script>
-</body>
-<footer></footer>
-
+  </body>
+  <footer></footer>
 </html>
