added loop sound board

--- a/form.html
+++ b/form.html
@@ -13,13 +13,7 @@
     </header>
     <div class="main">
       <div id="form">
-        <!--form content from code institute lesson-->
-        <!--ERROR form action will not go to thank_you.html
-            broweser displaying message
-            "Error response
-            Error code: 501Message: Unsupported method ('POST').
-            Error code explanation: HTTPStatus.NOT_IMPLEMENTED - 
-            Server does not support this operation".-->
+        <!--form content from code institute valitdating formslesson-->
         <form id="registration-form" action="thank_you.html" method="POST">
           <div id="form-div" class="username">
             <label for="username">Username</label>
@@ -82,6 +76,18 @@
         </div>
       </div>
     </div>
+    <!--ERROR form action will not go to thank_you.html
+                broweser displaying message
+                "Error response
+                Error code: 501Message: Unsupported method ('POST').
+                Error code explanation: HTTPStatus.NOT_IMPLEMENTED - 
+                Server does not support this operation".
+            
+                live site showing 405 error message. 
+                "The 405 error confirms that the requested page does exist, 
+                but the HTTP method used to make the initial request is not accepted."
+                (https://www.keycdn.com/support/405-method-not-allowed#:~:text=The%20405%20Method%20Not%20Allowed%20error%20is%20an%20HTTP%20response,HTTP%20method%20that%20was%20used.)
+        -->
     <!--js-->
     <script src="assets/js/script.js"></script>
   </body>
