--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Silkscreen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Sound-Fi</title> 
 </head>
@@ -88,7 +91,9 @@
     <!---audio elements hidden end-->
   </section>
     <header>
-        <h1>Sound-Fi</h1>
+        <div class="header">
+            <h1>Sound-Fi</h1>
+        </div>    
         <h3>Click or Press Pads to play</h3>
     </header>
     <!--user interface-->
@@ -123,6 +128,7 @@
             </div>
             <!--sound-board end-->
             <!--loop soundboard-container-->
+            <h3>Play Loops and Jam along</h3>
             <div class="sound-board" id="sound-board2">
                 <!--row container loop-->
                 <div class="row">
