--- a/thank_you.html
+++ b/thank_you.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Silkscreen&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Sound-Fi</title>
 </head>
 <body>
     <header>
-        <h1>Sound-Fi</h1>
+        <div class="header">
+            <h1>Sound-Fi</h1>
+        </div>
     </header>
     <div class="main">
         <p>Thank you for Joining Sound-Fi the Sound-Fi Community</p>
