--- a/form.html
+++ b/form.html
@@ -14,8 +14,8 @@
       <div class="header">
         <h1>Sound-Fi</h1>
       </div>
-      <h3>Creat and account</h3>
-      <h3>for exclusive access to updats</h3>
+      <h3>Creat account for</h3>
+      <h3>early to updates</h3>
       <h4>Form for demo purposes only</h4>
     </header>
     <div class="main">
@@ -80,10 +80,11 @@
             </div>
           </form>
         </div>
-        <div id="join">
-          <a id="nav" href="index.html" target="_blank">Back to Sound-Fi</a>
-        </div>
       </div>
+        <div id="join">
+          <a id="nav" href="index.html">BACK TO SOUND-FI</a>
+        </div>
+      
     </div>
     <!--ERROR form action will not go to thank_you.html
                 broweser displaying message
