--- a/index.html
+++ b/index.html
@@ -103,27 +103,28 @@
             <div class="sound-board">
                 <!--row container 4-->
                 <div class="row">
-                    <button class="sound-btn" onclick="playPadTen()">10</button>
-                    <button class="sound-btn" onclick="playPadEleven()">11</button>
-                    <button class="sound-btn" onclick="playPadTwelve()">12</button>
+                    <button class="sound-btn" onclick="playPadTen()">KEYS 1</button>
+                    <button class="sound-btn" onclick="playPadEleven()">KEYS 2</button>
+                    <button class="sound-btn" onclick="playPadTwelve()">KEYS 3</button>
                 </div>
                 <!--row container 3-->
                 <div class="row">
-                    <button class="sound-btn" onclick="playPadSeven()">7</button>
-                    <button class="sound-btn" onclick="playPadEight()">8</button>
-                    <button class="sound-btn" onclick="playPadNine()">9</butto>
+                    <button class="sound-btn" onclick="playPadSeven()">BLEEP 1</button>
+                    <button class="sound-btn" onclick="playPadEight()">BLEEP 2</button>
+                    <button class="sound-btn" onclick="playPadNine()">BLEEP 3</butto>
                 </div>
                 <!--row container 2-->
                 <div class="row">
-                    <button class="sound-btn" onclick="playPadFour()">4</button>
-                    <button class="sound-btn" onclick="playPadFive()">5</button>
-                    <button class="sound-btn" onclick="playPadSix()">6</butto>
+                    <button class="sound-btn" onclick="playPadFour()">HH 1</button>
+                    <button class="sound-btn" onclick="playPadFive()">HH1</button>
+                    <button class="sound-btn" onclick="playPadSix()">CYM</butto>
                 </div>
                 <!--row container 1-->
                 <div class="row">
-                    <button id="btn-1" class="sound-btn1" onclick="playPadOne()" onkeydown="playPadOne" type="button">1</button>
-                    <button class="sound-btn" onclick="playPadTwo()" type="button">2</button>
-                    <button class="sound-btn" onclick="playPadFour()" type="button">3</button>
+                    <button id="btn-1" class="sound-btn1" onclick="playPadOne()" onkeydown="playPadOne" type="button">KIICK 1</button>
+                    <button class="sound-btn" onclick="playPadTwo()" type="button">SNARE 1</button>
+                    <button class="sound-btn" onclick="playPadThree()" type="button">SNARE 2
+                    </button>
                 </div>
             </div>
             <!--sound-board end-->
@@ -132,16 +133,15 @@
             <div class="sound-board" id="sound-board2">
                 <!--row container loop-->
                 <div class="row">
-                    <button id="btn-1" class="sound-btn1" onclick="playLoop1()" onkeydown="playPadOne" type="button">Loop1</button>
-                    <button class="sound-btn" onclick="playLoop2()" type="button">loop2</button>
-                    <button class="sound-btn" onclick="playLoop3()" type="button">loop3</button>
+                    <button id="btn-1" class="sound-btn1" onclick="playLoop1()" onkeydown="playPadOne" type="button">LOOP 1</button>
+                    <button class="sound-btn" onclick="playLoop2()" type="button">Loop 2</button>
+                    <button class="sound-btn" onclick="playLoop3()" type="button">LOOP 3</button>
                 </div>
             </div>
             <!--loop sound-board end-->
-                <a id="nav" href="form.html" target="_blank">Create Acount</a>            
+                <a id="nav" href="form.html">CREATE ACCOUNT</a>            
         </div>
         <!--main end-->
-
     </section>
  
     <script src="assets/js/script.js"></script>
