--- a/thank_you.html
+++ b/thank_you.html
@@ -18,7 +18,7 @@
     </header>
     <div class="main">
         <p>Thank you for Joining Sound-Fi the Sound-Fi Community</p>
-        <a id="nav" href="index.html" target="_blank">Back to the music</a>
+        <a id="nav" href="index.html">Back to the music</a>
     </div>
     <!--js-->
     <script src="assets/js/script.js"></script>
