--- a/thank_you.html
+++ b/thank_you.html
@@ -17,7 +17,7 @@
         </div>
     </header>
     <div class="main">
-        <p>Thank you for Joining Sound-Fi the Sound-Fi Community</p>
+        <p>Thank you for Joining the Sound-Fi Community</p>
         <a id="nav" href="index.html">Back to the music</a>
     </div>
     <!--js-->
