final mentor session feedback, line 2 scrip.js

--- a/form.html
+++ b/form.html
@@ -95,7 +95,7 @@
         SOLVED removed attribute method and property post from form  --> 
     
     <!--js-->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/form.js"></script>
   </body>
   <footer></footer>
 </html>
