--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <source src="assets/audio/loop2.mp3" type="audio/mpeg">
     </audio>
     <!--loop3-->
-    <audio id="loop2">
+    <audio id="loop3">
         <source src="assets/audio/loop3.ogg" type="audio/ogg">
         <source src="assets/audio/loop4.mp3" type="audio/mpeg">
     </audio>
@@ -133,8 +133,8 @@
             <div class="sound-board" id="sound-board2">
                 <!--row container loop-->
                 <div class="row">
-                    <button id="btn-1" class="sound-btn1" onclick="playLoop1()" onkeydown="playPadOne" type="button">LOOP 1</button>
-                    <button class="sound-btn" onclick="playLoop2()" type="button">Loop 2</button>
+                    <button id="btn-1" class="sound-btn1" onclick="playLoop1()" type="button">LOOP 1</button>                
+                    <button class="sound-btn" onclick="playLoop2()" type="button">LOOP 2</button>
                     <button class="sound-btn" onclick="playLoop3()" type="button">LOOP 3</button>
                 </div>
             </div>
