project functional up to point of this commit ,but requires more javascript to meet goals.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <source src="assets/audio/loop3.ogg" type="audio/ogg">
         <source src="assets/audio/loop4.mp3" type="audio/mpeg">
     </audio>
-    <!---audio elements hidden end-->
+    <!---audio end-->
   </section>
     <header>
         <div class="header">
