removed onclick attribute from buttons and instead triggreing sound via event listener.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <source src="assets/audio/loop2.mp3" type="audio/mpeg">
     </audio>
     <!--loop3-->
-    <audio id="loop2">
+    <audio id="loop3">
         <source src="assets/audio/loop3.ogg" type="audio/ogg">
         <source src="assets/audio/loop4.mp3" type="audio/mpeg">
     </audio>
@@ -103,27 +103,27 @@
             <div class="sound-board">
                 <!--row container 4-->
                 <div class="row">
-                    <button class="sound-btn" onclick="playPadTen()">KEYS 1</button>
-                    <button class="sound-btn" onclick="playPadEleven()">KEYS 2</button>
-                    <button class="sound-btn" onclick="playPadTwelve()">KEYS 3</button>
+                    <button class="sound-btn">KEYS 1</button>
+                    <button class="sound-btn">KEYS 2</button>
+                    <button class="sound-btn">KEYS 3</button>
                 </div>
                 <!--row container 3-->
                 <div class="row">
-                    <button class="sound-btn" onclick="playPadSeven()">BLEEP 1</button>
-                    <button class="sound-btn" onclick="playPadEight()">BLEEP 2</button>
-                    <button class="sound-btn" onclick="playPadNine()">BLEEP 3</butto>
+                    <button class="sound-btn" >BLEEP 1</button>
+                    <button class="sound-btn" >BLEEP 2</button>
+                    <button class="sound-btn" >BLEEP 3</butto>
                 </div>
                 <!--row container 2-->
                 <div class="row">
-                    <button class="sound-btn" onclick="playPadFour()">HH 1</button>
-                    <button class="sound-btn" onclick="playPadFive()">HH1</button>
-                    <button class="sound-btn" onclick="playPadSix()">CYM</butto>
+                    <button class="sound-btn" >HH 1</button>
+                    <button class="sound-btn" >HH1</button>
+                    <button class="sound-btn">CYM</butto>
                 </div>
                 <!--row container 1-->
                 <div class="row">
-                    <button id="btn-1" class="sound-btn1" onclick="playPadOne()" onkeydown="playPadOne" type="button">KIICK 1</button>
-                    <button class="sound-btn" onclick="playPadTwo()" type="button">SNARE 1</button>
-                    <button class="sound-btn" onclick="playPadThree()" type="button">SNARE 2
+                    <button id="btn-1" class="sound-btn1" type="button">KIICK 1</button>
+                    <button class="sound-btn" type="button">SNARE 1</button>
+                    <button class="sound-btn" type="button">SNARE 2
                     </button>
                 </div>
             </div>
@@ -133,9 +133,9 @@
             <div class="sound-board" id="sound-board2">
                 <!--row container loop-->
                 <div class="row">
-                    <button id="btn-1" class="sound-btn1" onclick="playLoop1()" onkeydown="playPadOne" type="button">LOOP 1</button>
-                    <button class="sound-btn" onclick="playLoop2()" type="button">Loop 2</button>
-                    <button class="sound-btn" onclick="playLoop3()" type="button">LOOP 3</button>
+                    <button id="btn-1" class="sound-btn1" type="button">LOOP 1</button> 
+                    <button class="sound-btn">LOOP 2</button>
+                    <button class="sound-btn" type="button">LOOP 3</button>
                 </div>
             </div>
             <!--loop sound-board end-->
