removed button/ auidio play function

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
             <div class="sound-board" id="sound-board2">
                 <!--row container loop-->
                 <div class="row">
-                    <button id="lp-bt-1" class="sound-btn1" type="button">LOOP 1</button> 
-                    <button id="lp-bt-2"class="sound-btn">LOOP 2</button>
-                    <button id="lp-bt-3"class="sound-btn" type="button">LOOP 3</button>
+                    <button id="lp-bt-1" class="lp1" type="button">LOOP 1</button> 
+                    <button id="lp-bt-2"class="lp2">LOOP 2</button>
+                    <button id="lp-bt-3"class="lp3" type="button">LOOP 3</button>
                 </div>
             </div>
             <!--loop sound-board end-->
